--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@ layout: compress
 <div class="footer_site">
 <hr/>
 <div class="footer_copyright">
-  © 2022 Haoxiao (Bruce) Yang | All rights reserved
+  © 2024 Haoxiao Yang | All rights reserved
 </div>
 </div>
   </body>
