--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,4 +1,4 @@
-<div class="masthead">
+<!-- <div class="masthead">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
@@ -6,7 +6,7 @@
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
             <a href="https://greatbruceyoung.github.io/zh-cn" target="_self">
-              <img class="svg" src="/images/cn.svg" width="20pt"> 中文</a>
+              <img class="svg" src="/images/cn.svg" width="20pt"> Language</a>
           </li>
           {% for link in site.data.navigation.main %}
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
@@ -16,4 +16,26 @@
       </nav>
     </div>
   </div>
-</div>
+</div> -->
+<div class="masthead">
+  <div class="masthead__inner-wrap">
+    <div class="masthead__menu">
+      <nav id="site-nav" class="greedy-nav">
+        <button><div class="navicon"></div></button>
+        <ul class="visible-links">
+          <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
+            <a><img class="svg" src="/images/cn.svg" width="20pt"> Language</a>
+            <div class="dropdown-content">
+              <a href="#link1">Link 1</a>
+              <a href="#link2">Link 2</a>
+          </div>
+          </li>
+          {% for link in site.data.navigation.main %}
+            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+          {% endfor %}
+        </ul>
+        <ul class="hidden-links hidden"></ul>
+      </nav>
+    </div>
+  </div>
+</div> 
