--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -28,8 +28,8 @@
             <a target="_self">
               <img class="svg" src="/images/cn.svg" width="20pt"> Language</a>
               <div class="dropdown-content">
-                <a href="#link1">Link 1</a>
-                <a href="#link2">Link 2</a>
+                <a href="https://greatbruceyoung.github.io/de-de">Deutsch</a>
+                <a href="https://greatbruceyoung.github.io/zh-cn">中文</a>
             </div>
           </li>
           {% for link in site.data.navigation.main %}
