--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -27,10 +27,8 @@
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
             <a target="_self">
               <img class="svg" src="/images/cn.svg" width="20pt"> Language</a>
-              <div class="dropdown-content">
-                <a href="https://greatbruceyoung.github.io/de-de">Deutsch</a>
-                <a href="https://greatbruceyoung.github.io/zh-cn">中文</a>
-            </div>
+            <a target="_self">
+              <img class="svg" src="/images/cn.svg" width="20pt"> 中文</a>
           </li>
           {% for link in site.data.navigation.main %}
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
