--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -18,7 +18,7 @@
   </div>
 </div>  -->
 
-<div class="masthead">
+<!-- <div class="masthead">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
@@ -38,4 +38,28 @@
       </nav>
     </div>
   </div>
-</div> 
+</div>  -->
+
+<div class="masthead">
+  <div class="masthead__inner-wrap">
+      <div class="masthead__menu">
+          <nav id="site-nav" class="greedy-nav">
+              <button id="menu-toggle"><div class="navicon"></div></button>
+              <ul class="visible-links">
+                  <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
+                      <a href="https://greatbruceyoung.github.io/en" target="_self">
+                          <img class="svg" src="/images/en.svg" width="20pt"> Language
+                      </a>
+                      <a href="https://greatbruceyoung.github.io/zh-cn" target="_self">
+                          <img class="svg" src="/images/cn.svg" width="20pt"> 中文
+                      </a>
+                  </li>
+                  {% for link in site.data.navigation.main %}
+                  <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+                  {% endfor %}
+              </ul>
+              <ul class="hidden-links hidden"></ul>
+          </nav>
+      </div>
+  </div>
+</div>
