--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -26,7 +26,7 @@
               <button id="menu-toggle"><div class="navicon"></div></button>
               <ul class="visible-links">
                   <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
-                      <a href="https://greatbruceyoung.github.io/en" target="_self">
+                      <a href="https://greatbruceyoung.github.io/de-de" target="_self">
                           <img class="svg" src="/images/en.svg" width="20pt"> Deutsch
                       </a>
                       <a href="https://greatbruceyoung.github.io/zh-cn" target="_self">
